--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,12 +2,19 @@ body{
   background-color: #4E6975;
   text-align: center;
   color: white;
+  background-image:linear-gradient(rgb(123, 183, 233),rgb(123, 183, 233)) ;
+  background-size: cover;
 }
 a:link{
   text-decoration: none;
 }
 h1{
-  font-size:calc(30px + 2vmin);
+  font-size:calc(20px + 2vmin);
+  color: rgb(0, 0, 0);
+}
+h2{
+  color: rgb(105, 12, 158);
+  font-size: calc(30px + 2vmin);;
 }
 
 .Home{
@@ -15,17 +22,22 @@ h1{
   margin-top: 15%;
   margin-right: 30%;
   margin-left: 30%;
-  background-color: #4E6975;
   align-items: center;
+}
+.p{
+  max-width: 50px;
+  font-size: large;
 }
 .SignIn{
   display: inline-block;
   align-items: center;
   white-space: nowrap;
+  display: flex;
+  font-size: 20px;
 }
 .SignIn-1{
   opacity: 1;
-  background-color: #EF8E8E;
+  background-color: #81c405;
   padding: 6% 20% 8% 20%;
   font-size:calc(10px + 1vmin);
 }
@@ -46,7 +58,6 @@ h1{
 }
 .Vdo-box{
     text-align: center;
-    background-color: #282c34;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -66,15 +77,17 @@ h1{
   border-radius: 4% 4% 4% 4%;
   max-width: 100%;
   max-height: 400px;
-  padding: 10% 30% 0 30%;
+  padding: 2% 2% 0 2%;
   flex: 25%;
 }
 .Vdo-Image{
   max-width: 100%;
   max-height: inherit;
 }
-
-.Vdo-Card:hover .Vdo-Image{
+.Caption{
+  padding: 0;
+}
+.Vdo-Card:hover , .Vdo-Image{
   -webkit-filter: drop-shadow(0 0 2px black);
   filter: drop-shadow(0 0 4px black);
 }
